fixing body background-size on mobile
tipping the ‘scale’ ;)

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -457,6 +457,11 @@ label.checkbox-inline {
 
 @media only screen and (max-width: 480px) {
     /* Styles */
+
+    body {
+        background-size: 100%;
+    }
+
     .hero {
         padding: 10px;
         height: 645px;
